--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,18 @@
 {
 	"name": "beebmx/kirby-middleware",
-	"description": "Kirby Middleware",
+	"description": "Kirby Middleware provide a powerful mechanism for inspecting and filtering requests entering in your Kirby site.",
 	"license": "MIT",
 	"type": "kirby-plugin",
-	"version": "1.0.1",
+	"version": "1.0.2",
+    "keywords": [
+        "kirby",
+        "kirby-4",
+        "security",
+        "middleware",
+        "validations",
+        "http-request",
+        "request"
+    ],
     "authors": [
         {
             "name": "Fernando Gutierrez",
